--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ section:hover {
 }
 
 
-                /* Food Section */
+                /* Food */
 #food {
     background-color: #fffbe9;  
 }
@@ -105,6 +105,12 @@ section:hover {
 #food .col-md-4:hover {
     transform: scale(1.05);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.food-img {
+    width: 90%;
+    height: 250px; 
+    object-fit: auto;
 }
 
                 /* Chefs */
